--- a/src/dotnet/feelthemath.org/Web.config
+++ b/src/dotnet/feelthemath.org/Web.config
@@ -11,5 +11,19 @@
       <compilation debug="true" targetFramework="4.5.2" />
       <httpRuntime targetFramework="4.5.2" />
     </system.web>
+  <system.webServer>
+    <rewrite>
+      <rules>
+        <rule name="Redirect to WWW" stopProcessing="true">
+          <match url=".*" />
+          <conditions>
+            <add input="{HTTP_HOST}" pattern="^feelthemath.org$" />
+          </conditions>
+          <action type="Redirect" url="http://www.feelthemath.org/{R:0}"
+               redirectType="Permanent" />
+        </rule>
+      </rules>
+    </rewrite>
+  </system.webServer>
 
 </configuration>
